# zhihui_nodes_comfyui

./: .comfyignore  CHANGELOG.md  ColorRemoval.py  ColorTracking.py  ExtraOptions.py  ImageScaler.py  Image_Switcher.py  Image_Switcher_4way.py  MultiLineTextNode.py  PhotographPromptGenerator.py  PromptOptimizer.py  Prompt_Preset.py  Prompt_Preset_MultipleChoice.py  README.md  README_CN.md  README_EN.md  TextCombinerNode.py  TextExtractor.py  TextModifier.py  TextSwitch.py  TranslateNodeBeta.py  TriggerWordMerger.py  TriggerWord_Merger.py  VideoBatchLoader.py  VideoCombine.py  Video_Batch_Loader.py  Video_Combiner.py  WanPromptGenerator.py  ZhiAIApiConfig.py  __init__.py  accessories_options.txt  boots_options.txt  bottoms_options.txt  camera_options.txt  character_options.txt  clean_pycache.bat  gender_options.txt  lens_options.txt  lighting_options.txt  location_options.txt  (+13 more)
BaiduTranslate/: BaiduTranslateNode.py
Chinese_Localization_Files/: zhihui_nodes_comfyui.json  zhihui_nodes_translation.json
Example Workflow/: WAN2.2提示词预设扩写示例.json
ImgSwitch/: AutoImageSwitch.py  ImageSwitch2way.py  ImageSwitch4way.py  Image_Switcher.py  Image_Switcher_4way.py
KontextPP/: KontextPresetsPlus.py  presets.txt
KontextPresets/: KontextPresetsBasic.py
Nodes/: AudioDuration.py  Batch_loading_of_images.py  ColorRemoval.py  ExtraOptions.py  GetImageSizes.py  GroupSwitchManager.py  ImageAspectRatio.py  ImageFormatConverter.py  ImageRotateTool.py  ImageScaler.py  IntNode.py  LatentSwitch.py  LatentSwitchDualMode.py  MultiLineTextNode.py  PauseWorkflow.py  PromptDelete.py  ShowAny.py  (+20 more)
(+547 files in other folders)
