[project]
name = "zhihui_nodes_comfyui"
description = "ComfyUI custom nodes collection with 55+ nodes: multi-engine translation, text processing, prompt generators, image tools, Qwen3-VL vision understanding, LM Studio integration, and more."
version = "1.0.25"
license = {file = "LICENSE"}
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "opencv-python",
    "torchvision",
    "torchaudio",
    "numpy",
    "requests",
    "Pillow",
    "aiohttp",
    "huggingface_hub",
    "modelscope",
    "accelerate",
    "optimum",
    "av",
    "qwen-vl-utils",
    "bitsandbytes",
    "torch>=2.0.0",
    "transformers>=4.57.0",
    "openai>=1.0.0",
    "nvidia-ml-py",
    "timm>=0.9.16",
    "sentencepiece",
    "einops",
]

[project.urls]
Repository = "https://github.com/zhihui6/zhihui_nodes_comfyui"
Documentation = "https://github.com/zhihui6/zhihui_nodes_comfyui#readme"
"Bug Tracker" = "https://github.com/zhihui6/zhihui_nodes_comfyui/issues"

[tool.comfy]
PublisherId = "zhihui6"
DisplayName = "Zhihui Nodes"
Icon = ""
includes = []